# Atlas77

./: .clog.toml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING_GUIDELINES.md  Cargo.toml  Doc.md  IDEAS.md  ISSUE_TEMPLATE.md  LCF.md  LICENSE-BEERWARE.md  LICENSE-MIT.md  README.md  STDLIB.md  Statement.md  cliff.toml  grammar_rules.txt  history.txt
.github/workflows/: dependabot.yml  rust-clippy.yml  rust.yml
atlas/: Cargo.toml  README.md  main.at  main.atl  test.ah  test.atlas
atlas-compiler/: Cargo.toml
atlas-core/: Cargo.toml  README.md  ROADMAP.md
atlas-core/src/: language.rs  lib.rs  simple_lexer.rs  simple_parser.rs
atlas-core/src/interfaces/: mod.rs
atlas-core/src/interfaces/compiler/: mod.rs
atlas-core/src/interfaces/lexer/: errors.rs  mod.rs  token.rs
atlas-core/src/interfaces/parser/: ast.rs  data_types.rs  mod.rs  node.rs  nodes.rs  parse_errors.rs
atlas-core/src/interfaces/pass/: mod.rs
atlas-core/src/interfaces/runtime/: mod.rs  value.rs  visitor.rs
atlas-core/src/interfaces/visitor/: mod.rs  value.rs
atlas-core/src/utils/: case.rs  mod.rs  span.rs
atlas-misc/: Cargo.toml
atlas-misc/src/: case.rs  file.rs  lib.rs  main.rs  report.rs  span.rs
atlas-printer/: Cargo.toml
atlas-printer/src/: lib.rs
atlas-syntax/: Cargo.toml
atlas-syntax/src/: ast.rs  ast_.rs  case.rs  common.rs  decl_parser.rs  env.rs  expr_parser.rs  lexer.rs  lib.rs  main.rs  parser.rs  stmt_parser.rs  token.rs
atlas-syntax/src/ast/: core.rs  declaration.rs  expr.rs  function.rs  mod.rs  prepocessor.rs  statements.rs
atlas-test/: Cargo.toml  test.atlas
atlas-test/src/: main.rs  simple_cli.rs  simple_grammar.txt  simple_lexer.rs  simple_parser.rs  simple_visitor.rs
atlas/src/: language.rs  lib.rs  main.rs  sample.tao  simple_checker.rs  simple_lexer.rs  simple_parser.rs  simple_visitor.rs  span.rs
atlas/src/interfaces/: mod.rs
atlas/src/interfaces/lexer/: errors.rs  mod.rs  token.rs
atlas/src/interfaces/parser/: ast.rs  errors.rs  mod.rs  node.rs
atlas/src/utils/: case.rs  mod.rs  span.rs  visitor.rs
atlas_frontend/: Cargo.toml
atlas_frontend/src/: lib.rs  main.rs
atlas_frontend/src/lexer/: mod.rs
atlas_frontend/src/parser/: ast.rs  mod.rs  node.rs
atlas_frontend/tests/: hehe.rs
atlas_memory/: Cargo.toml
atlas_memory/src/: lib.rs  object_map.rs  stack.rs  varmap.rs  vm_data.rs
atlas_runtime/: Cargo.toml
atlas_runtime/src/: lib.rs  main.rs  node.rs  value.rs  visitor.rs  vm_state.rs
compiler/: Cargo.toml  grammar.txt
compiler/atlas_hlir/: Cargo.toml
compiler/atlas_hlir_error/: Cargo.toml
compiler/atlas_hlir_interpreter/: Cargo.toml
compiler/atlas_hlir_passes/: Cargo.toml
compiler/atlas_lexer/: Cargo.toml
compiler/atlas_lexer/src/: lib.rs
compiler/atlas_lexer_error/: Cargo.toml
compiler/atlas_lexer_error/src/: lib.rs
compiler/atlas_lexer_token/: Cargo.toml
compiler/atlas_lexer_token/src/: lib.rs
compiler/atlas_parser/: Cargo.toml
compiler/atlas_parser/src/: grammar.lalrpop  grammar.rs  lib.rs
compiler/atlas_parser_ast/: Cargo.toml
compiler/atlas_parser_ast/src/: lib.rs
compiler/atlas_parser_error/: Cargo.toml
compiler/atlas_parser_error/src/: lib.rs
compiler/atlas_parser_interpreter/: Cargo.toml
compiler/atlas_parser_interpreter/src/: lib.rs
compiler/atlas_preprocessor/: Cargo.toml
compiler/atlas_span/: Cargo.toml
compiler/atlas_span/src/: lib.rs  test.txt
compiler/atlas_utils/: Cargo.toml
compiler/atlas_utils/src/: lib.rs
compiler/src/: lib.rs
compiler/src/lexer/: lex_error.rs  mod.rs  token.rs
compiler/src/parser/: data_type.rs  (+2 more)
core/atlas/: Cargo.toml
core/common/: Cargo.toml
core/compiler/: Cargo.toml  build.rs
core/compiler/common/src/: macros.rs  value.rs
core/compiler/errors/: Cargo.toml
core/compiler/lexer/: Cargo.toml
core/compiler/lexer/src/: lib.rs  token.rs
core/compiler/parser/: Cargo.toml
core/compiler/parser/src/: data_type.rs  lib.rs  nodes.rs
core/compiler/semantic_analysis/: Cargo.toml
core/compiler/src/: ast.rs  data_type.rs  grammar.lalrpop  grammar.rs  grammar2.lalrpop  lib.rs  macros.rs  nodes.rs  type_check.rs
core/format/: Cargo.toml
core/runtime/: Cargo.toml
examples/: fib.atlas  for_loop.rl  guessing_game.atlas  hello_world.rl  if_else.rl  list.atlas  struct.atlas  test.atlas  while_loop.rl
examples/asa_examples/: hello_world.asr
lib/: std.atlas
libraries/: stdlib.asr
rasm-compiler/: Cargo.toml
rasm-compiler/src/: grammar.pest  lib.rs
reg-byte/: Cargo.toml
reg-byte/src/: lib.rs
reg-lang/: Cargo.toml
reg-lang-compiler/: Cargo.toml
reg-lang-compiler/src/: grammar.pest  instructions.rs  lib.rs
reg-lang-parser/: Cargo.toml
reg-lang-parser/src/: grammar.pest  lib.rs
reg-lang-runtime/: Cargo.toml
reg-lang-runtime/src/: lib.rs
reg-lang-vm/: Cargo.toml
reg-lang-vm/src/: lib.rs  opcode.rs
reg-lang/src/: main.rs
src/: atlas77.rs  bytecode.pest  grammar.pest  instruction.rs  lib.rs  main.rs  vm.rs
src/asr_compiler/: compiler.rs  intermediate_instruction.rs  mod.rs
src/ast/: data_type.rs  func.rs  literal.rs  mod.rs  stmt.rs
src/atlas77/: Atlas77.g4  Atlas77.interp  Atlas77Lexer.interp  Atlas77Lexer.tokens  atlas77lexer.rs  atlas77listener.rs  atlas77parser.rs
src/compiler/: compiler.rs  mod.rs
src/ir/: builder.rs  context.rs  errors.rs  mod.rs  print.rs
src/parser/: ast.rs  eval.rs  mod.rs  parser.rs
src/reg_lang_compiler/: compiler.rs
src/reg_lang_repl/: repl.rs
src/reg_lang_vm/: register.rs  vm.rs
src/tree_walker/: eval.rs  mod.rs
src/types/: data_type.rs  mod.rs
src/vm/: bytecode.rs  events.rs  mod.rs  register.rs  virtual_cpu.rs
vm/: Cargo.toml
vm/benches/: vm_benchmark.rs
vm/examples/: brainfuck.txt  extern_call.rs  extern_call.txt  fib.rs  fib.txt
vm/src/: brainfuck.txt  example.txt  lib.rs  main.rs
vm/src/instruction/: mod.rs
vm/src/instruction/compiler/: mod.rs
vm/src/instruction/compiler/lexer/: mod.rs
vm/src/instruction/compiler/parser/: mod.rs
vm/src/memory/: mod.rs  object_map.rs  stack.rs  vm_data.rs
vm/src/runtime/: mod.rs  vm_state.rs
(+73 files in other folders)
