[package]
name = "asl"
version = "0.0.1-alpha"
authors = ["Gipson62 <j.h.gipson62@gmail.com>"]
homepage = "https://redgear.tk/"
repository = "https://github.com/RedGear-Studio/ASL"
description = " [A Simple Language] is a programming language in development written in Rust "
readme = "README.md"
edition = "2021"
license = "MIT"
categories = ["language"]

[dependencies]
pest = "2.5.7"
pest_derive = "2.5.7"
colored = "2.0.0"