[workspace]
resolver = "1"
members = [
    "atlas-core",
    "atlas-test",

    "compiler/atlas_hlir",
    "compiler/atlas_hlir_error",
    "compiler/atlas_hlir_interpreter",
    "compiler/atlas_hlir_passes",

    "compiler/atlas_lexer",
    "compiler/atlas_lexer_token",
    "compiler/atlas_lexer_error",

    "compiler/atlas_parser",
    "compiler/atlas_parser_ast",
    "compiler/atlas_parser_error",
    "compiler/atlas_parser_interpreter",
    
    "compiler/atlas_utils",

    "compiler/atlas_span",
]

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false
