[workspace]
resolver = "1"
members = [
    "core/compiler/parser",
    "core/compiler/lexer",
    "core/compiler/errors",
    "core/compiler/semantic_analysis",
    "core/compiler",
    "core/compiler/common",
    "core/atlas",
]
exclude = [
    "examples"
]

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
overflow-checks = false
