[package]
name = "atlas-core"
version = "0.4.0"
authors = ["Gipson62 <j.h.gipson62@gmail.com>"]
description = "(In Alpha) Embeddable functional programming language"
keywords = ["language", "tool", "programming-language", "language-agnostic"]
categories = ["development-tools", "development-tools::build-utils"]
license = "MIT"
edition = "2021"
homepage = "https://redgear.tk/"
repository = "https://github.com/RedGear-Studio/atlas-core"

[lib]
name = "atlas_core"

[features]
default = ["debug"]
debug = ["dep:env_logger"]

[dependencies]
ariadne = { version = "0.3.0", features = ["auto-color"] }
heck = "0.4.1"
# debug logs
env_logger = { version = "0.10", optional = true }
internment = "0.7.4"