[package]
name = "atlas-test"
version = "0.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atlas-core = { path = "../atlas-core" }
clap = { version = "4.4.8", features = ["derive"] }
atlas_lexer = { path = "../compiler/atlas_lexer" }
atlas_lexer_error = { path = "../compiler/atlas_lexer_error" }
codespan-reporting = "0.11.1"
atlas_span = { path = "../compiler/atlas_span" }
atlas_parser = { path = "../compiler/atlas_parser" }
atlas_parser_interpreter = { path = "../compiler/atlas_parser_interpreter" }
atlas_utils = { path = "../compiler/atlas_utils" }
