[package]
name = "atlas-core"
version = "0.0.0"
authors = ["Gipson <j.h.gipson62@gmail.com>"]
description = "The core of the Atlas which contains all relevant traits, interface and base structs."
license = "MIT"
edition = "2021"
homepage = "https://redgear.tk/"
repository = "https://github.com/RedGear-Studio/Atlas77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.3.0", features = ["auto-color"] }
clap = { version = "4.3.23", features = ["derive"] }
heck = "0.4.1"
