[package]
name = "atlas_frontend"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
panic = "abort"
lto = true
codegen-units = 1
overflow-checks = false
debug-assertions = false
strip = "debuginfo"
[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[dependencies]
atlas-core = { git = "https://github.com/RedGear-Studio/Atlas-core"}
internment = "0.8.4"
atlas_memory = { path = "../atlas_memory" }
