[package]
name = "vm"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
panic = "abort"
lto = true
codegen-units = 1
overflow-checks = false
debug-assertions = false
strip = "debuginfo"
[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[dependencies]
atlas-core = "0.6.0-beta3"
internment = "0.8.4"

[dev-dependencies]
criterion = "0.5.1"
gnuplot = "0.0.43"

[[bench]]
name = "vm_benchmark"
harness = false
